@@ -1,13 +1,13 @@
 package no.nav.foreldrepenger.domene.rest.historikk.tilfeller;
 
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
 
 import jakarta.enterprise.context.ApplicationScoped;
 import jakarta.inject.Inject;
 
-import no.nav.foreldrepenger.behandlingslager.behandling.historikk.HistorikkEndretFeltType;
-import no.nav.foreldrepenger.behandlingslager.behandling.historikk.HistorikkEndretFeltVerdiType;
+import no.nav.foreldrepenger.behandlingslager.behandling.historikk.HistorikkinnslagLinjeBuilder;
 import no.nav.foreldrepenger.domene.entiteter.BeregningsgrunnlagEntitet;
 import no.nav.foreldrepenger.domene.entiteter.BeregningsgrunnlagGrunnlagEntitet;
 import no.nav.foreldrepenger.domene.entiteter.BeregningsgrunnlagPrStatusOgAndel;
@@ -18,7 +18,6 @@ import no.nav.foreldrepenger.domene.rest.FaktaOmBeregningTilfelleRef;
 import no.nav.foreldrepenger.domene.rest.dto.FaktaBeregningLagreDto;
 import no.nav.foreldrepenger.domene.rest.dto.VurderteArbeidsforholdDto;
 import no.nav.foreldrepenger.domene.rest.historikk.ArbeidsgiverHistorikkinnslag;
-import no.nav.foreldrepenger.historikk.HistorikkInnslagTekstBuilder;
 
 @ApplicationScoped
 @FaktaOmBeregningTilfelleRef(FaktaOmBeregningTilfelle.VURDER_TIDSBEGRENSET_ARBEIDSFORHOLD)
@@ -36,46 +35,48 @@ public class VurderTidsbegrensetHistorikkTjeneste extends FaktaOmBeregningHistor
     }
 
     @Override
-    public void lagHistorikk(Long behandlingId,
-                             FaktaBeregningLagreDto dto,
-                             HistorikkInnslagTekstBuilder tekstBuilder,
-                             BeregningsgrunnlagEntitet nyttBeregningsgrunnlag,
-                             Optional<BeregningsgrunnlagGrunnlagEntitet> forrigeGrunnlag,
-                             InntektArbeidYtelseGrunnlag iayGrunnlag) {
+    public List<HistorikkinnslagLinjeBuilder> lagHistorikk(FaktaBeregningLagreDto dto,
+                                                           BeregningsgrunnlagEntitet nyttBeregningsgrunnlag,
+                                                           Optional<BeregningsgrunnlagGrunnlagEntitet> forrigeGrunnlag,
+                                                           InntektArbeidYtelseGrunnlag iayGrunnlag) {
 
         var tidsbegrensetDto = dto.getVurderTidsbegrensetArbeidsforhold();
-        var periode = nyttBeregningsgrunnlag.getBeregningsgrunnlagPerioder().get(0);
+        var periode = nyttBeregningsgrunnlag.getBeregningsgrunnlagPerioder().getFirst();
         var fastsatteArbeidsforhold = tidsbegrensetDto.getFastsatteArbeidsforhold();
         var arbeidsforholdOverstyringer = iayGrunnlag.getArbeidsforholdOverstyringer();
+        List<HistorikkinnslagLinjeBuilder> linjeBuilder = new ArrayList<>();
         for (var arbeidsforhold : fastsatteArbeidsforhold) {
-            var korrektAndel = periode.getBeregningsgrunnlagPrStatusOgAndelList().stream()
+            var korrektAndel = periode.getBeregningsgrunnlagPrStatusOgAndelList()
+                .stream()
                 .filter(a -> a.getAndelsnr().equals(arbeidsforhold.getAndelsnr()))
                 .findFirst()
                 .orElseThrow(() -> new IllegalStateException("Finner ikke andel med andelsnr " + arbeidsforhold.getAndelsnr()));
-            lagHistorikkInnslag(arbeidsforhold, korrektAndel, tekstBuilder, arbeidsforholdOverstyringer);
+            linjeBuilder.addAll(lagHistorikkInnslag(arbeidsforhold, korrektAndel, arbeidsforholdOverstyringer));
         }
+        return linjeBuilder;
     }
 
-    private void lagHistorikkInnslag(VurderteArbeidsforholdDto arbeidsforhold, BeregningsgrunnlagPrStatusOgAndel andel,
-                                     HistorikkInnslagTekstBuilder tekstBuilder, List<ArbeidsforholdOverstyring> arbeidsforholdOverstyringer) {
-        oppdaterVedEndretVerdi(HistorikkEndretFeltType.ENDRING_TIDSBEGRENSET_ARBEIDSFORHOLD, arbeidsforhold, andel, tekstBuilder, arbeidsforholdOverstyringer);
+    private List<HistorikkinnslagLinjeBuilder> lagHistorikkInnslag(VurderteArbeidsforholdDto arbeidsforhold,
+                                                                   BeregningsgrunnlagPrStatusOgAndel andel,
+                                                                   List<ArbeidsforholdOverstyring> arbeidsforholdOverstyringer) {
+        var arbeidsforholdInfo = arbeidsgiverHistorikkinnslagTjeneste.lagHistorikkinnslagTekstForBeregningsgrunnlag(andel.getAktivitetStatus(),
+            andel.getArbeidsgiver(), andel.getArbeidsforholdRef(), arbeidsforholdOverstyringer);
+        var opprinneligVerdi = konvertBooleanTilFaktaEndretVerdiType(arbeidsforhold.isOpprinneligVerdi());
+        var nyVerdi = konvertBooleanTilFaktaEndretVerdiType(arbeidsforhold.isTidsbegrensetArbeidsforhold());
+        List<HistorikkinnslagLinjeBuilder> linjerBuilder = new ArrayList<>();
+        if (opprinneligVerdi != nyVerdi) {
+            linjerBuilder.add(
+                new HistorikkinnslagLinjeBuilder().fraTil("Arbeidsforhold hos " + arbeidsforholdInfo, opprinneligVerdi, nyVerdi));
+            linjerBuilder.add(HistorikkinnslagLinjeBuilder.LINJESKIFT);
+        }
+        return linjerBuilder;
     }
 
-    private HistorikkEndretFeltVerdiType konvertBooleanTilFaktaEndretVerdiType(Boolean endringTidsbegrensetArbeidsforhold) {
+    private String konvertBooleanTilFaktaEndretVerdiType(Boolean endringTidsbegrensetArbeidsforhold) {
         if (endringTidsbegrensetArbeidsforhold == null) {
             return null;
         }
-        return endringTidsbegrensetArbeidsforhold ? HistorikkEndretFeltVerdiType.TIDSBEGRENSET_ARBEIDSFORHOLD : HistorikkEndretFeltVerdiType.IKKE_TIDSBEGRENSET_ARBEIDSFORHOLD;
-    }
-
-    private void oppdaterVedEndretVerdi(HistorikkEndretFeltType historikkEndretFeltType, VurderteArbeidsforholdDto arbeidsforhold, BeregningsgrunnlagPrStatusOgAndel andel,
-                                        HistorikkInnslagTekstBuilder tekstBuilder, List<ArbeidsforholdOverstyring> arbeidsforholdOverstyringer) {
-        var arbeidsforholdInfo = arbeidsgiverHistorikkinnslagTjeneste.lagHistorikkinnslagTekstForBeregningsgrunnlag(andel.getAktivitetStatus(), andel.getArbeidsgiver(), andel.getArbeidsforholdRef(), arbeidsforholdOverstyringer);
-        var opprinneligVerdi = konvertBooleanTilFaktaEndretVerdiType(arbeidsforhold.isOpprinneligVerdi());
-        var nyVerdi = konvertBooleanTilFaktaEndretVerdiType(arbeidsforhold.isTidsbegrensetArbeidsforhold());
-        if (opprinneligVerdi != nyVerdi) {
-            tekstBuilder.medEndretFelt(historikkEndretFeltType, arbeidsforholdInfo, opprinneligVerdi, nyVerdi);
-        }
+        return endringTidsbegrensetArbeidsforhold ? "tidsbegrenset" : "ikke tidsbegrenset";
     }
 
 
